TopRatedFragment , FavoriteFragment 추가

--- a/app/src/main/res/layout/fragment_top_rated.xml
+++ b/app/src/main/res/layout/fragment_top_rated.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    tools:context=".ui.PopularMovieFragment">
+    tools:context=".ui.TopRatedFragment">
 
+    <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/movieRecyclerList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_margin="5dp">
 
     </android.support.v7.widget.RecyclerView>
 
