--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/secondaryColor"
+    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
 
@@ -12,7 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:elevation="0dp">
-        <include layout="@layout/movie_toolbar" android:id="@+id/mainToolbar"/>
+
+        <include
+            android:id="@+id/mainToolbar"
+            layout="@layout/movie_toolbar"
+            android:layout_width="818089024dp"
+            android:layout_height="818088999dp" />
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -26,10 +33,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
+        android:layout_height="match_parent"
+        android:background="@color/secondaryColor"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
